deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broken-app-deploy
  labels:
    app: broken-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: broken-app
  template:
    metadata:
      labels:
        app: broken-app
    spec:
      securityContext:
        runAsUser: 11000
        runAsGroup: 11000
        fsGroup: 11000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: broken-app
          image: quay.io/onzack/nginx-hostname-demo:1.0.0
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "500Mi"
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8082
