service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: broken-app
  labels:
    app: broken-app
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8088
  selector:
    app: broken-appp
