ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broken-app
spec:
  rules:
    - host: 127.0.0.1.broken.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brochen-app
                port:
                  number: 8080
